<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MapeAR</string>
    <string name="title_activity_maps" translatable="false">Mapa</string>


    <string name="location_permission_denied">Permissão negada</string>
    <string name="permission_required_toast">Permissão necessária</string>
    <string name="permission_rationale_location">O aplicativo MapeAR necessita de permissão</string>

    <string name="search_hint">Search Location</string>

    <string name="N">N</string>
    <string name="NE">NE</string>
    <string name="E">E</string>
    <string name="SE">SE</string>
    <string name="S">S</string>
    <string name="SW">SW</string>
    <string name="W">W</string>
    <string name="NW">NW</string>

    <string name="OSM">Openstreetmap</string>
    <string name="MIXARE">Mixare</string>

    <string name="CIRCLE_MARKER">Circles</string>
    <string name="NAVIGATION_MARKER">Arrows</string>

    <string name="empty_list">Sorry, \nThere is no location information \navailable within this radius.\nPlease try to search in a wider range.</string>
    <string name="option_not_available">Sorry, We are working on it... \nThis option will be available soon!</string>

    <string name="license">Copyright (C) 2010- Peer internet solutions
		\n\nThis program is free software: 	you can redistribute it and/or modify it under the terms of the
		GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
		or at your option) any later version.
		\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public
		License for more details.
		\n\n You should have received a copy of the GNU General Public License along with this program.
		If not, see &lt;http://www.gnu.org/licenses/&gt;
	</string>

    <string name="launch_plugins">Launch plugins?</string>
    <string name="plugin_message">Some plugins where found, do you want to enable them?</string>
    <string name="remember_this_decision">Remember this decision</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="menu_item_1">Data Source</string>
    <string name="menu_item_2">List view</string>
    <string name="menu_item_3">Map view</string>
    <string name="menu_item_4">Zoom level</string>
    <string name="menu_item_5">Search</string>
    <string name="menu_item_6">Info</string>
    <string name="menu_item_7">License</string>

    <string name="cancel">Cancel</string>

    <string name="data_source_edit_err">This data source cannot be edited.</string>
    <string name="data_source_delete_err">This data source cannot be deleted.</string>

    <string name="connection_error_dialog">Sorry, a connection Error occured! \nPlease check if you are connected to the Internet.</string>
    <string name="connection_error_dialog_button1">Retry</string>
    <string name="connection_error_dialog_button2">Open Settings</string>
    <string name="connection_error_dialog_button3">Close App</string>

    <string name="connection_GPS_dialog_text">The GPS location can not be updated... \nIf you continue it could be that the Information
		\nwill not be displayed in the right place.</string>
    <string name="connection_GPS_dialog_button1">Continue</string>
    <string name="connection_GPS_dialog_button2">Close</string>

    <string name="no_website_available">Sorry, there is no further \ninformation available.</string>

    <string name="license_title">License</string>
    <string name="close_button">Close</string>
    <string name="general_info_title">General Information</string>

    <string name="general_info_text">GPS info: </string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="altitude">Altitude: </string>
    <string name="speed">Speed: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="gps_last_fix">Last GPS fix: </string>

    <string name="map_menu_normal_mode">Map</string>
    <string name="map_menu_satellite_mode">Satellite</string>
    <string name="map_menu_cam_mode">Camera</string>
    <string name="map_my_location">My Location</string>
    <string name="map_toggle_path_on">Show Path</string>
    <string name="map_toggle_path_off">Hide Path</string>

    <string name="map_current_location_click">Your current location</string>

    <string name="data_source_add">Add data source</string>
    <string name="data_source_edit">Edit data source</string>
    <string name="data_source_delete">Delete data source</string>
    <string name="data_source_change_wikipedia">Changed to Wikipedia as data source</string>
    <string name="data_source_change_twitter">Changed to Twitter as data source</string>
    <string name="data_source_change_osm">Changed to OpenStreetMap as data source</string>

    <string name="search_failed_notification">No search results</string>
    <string name="source_openstreetmap">Stations around</string>

    <string name="search_active_1">Search on data source</string>
    <string name="search_active_2">. Touch to terminate search</string>
    <string name="download_error">Error while downloading</string>
    <string name="download_received">Received data from</string>

    <string name="add_osm_menu">Add OpenStreetMap URL</string>
    <string name="insert_osm_url">Insert OpenStreetMap URL</string>
    <string name="osm_max_object_menu">Set max POI per URL</string>
    <string name="set_osm_max_object">Maximum POIs per URL</string>
    <string name="location_not_found">Location not found, make sure you enabled Wifi location or GPS in the settings.</string>
    <string name="refreshing">Refreshing</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>


    <string name="title_activity_drawer">MapeAR</string>

    <string name="navigation_drawer_open">Abrir Menu de Navegação</string>
    <string name="navigation_drawer_close">Fechar Menu de Navegação</string>
    <string name="action_settings">Configurações</string>

    <string name="filter_hint">Buscar</string>
    <string name="accessibility_service_label">Serviço de Acessibilidade</string>
    <string name="accessibility_service_description">Descrição do Serviço de Acessibilidade</string>
    <string name="descLista">Lista com filtro de busca de todos os pontos cadastrados na plataforma educar</string>
    <string name="descMapa">Mapa com localização dos pontos cadastrados na plataforma educar</string>
    <string name="descQRcode">Função de leitura de QRcodes dos pontos cadastrados na plataforma educar</string>
    <string name="descRA">Função de Realidade Aumentada com localização dos pontos cadastrados na plataforma educar</string>
    <string name="descBusca">Filtro de busca dos pontos cadastrados na plataforma educar</string>
    <string name="logo_do_aplicativo">Logo do Aplicativo</string>
    <string name="company_name">LabLivre</string>
    <string name="title_activity_list">Lista</string>
    <string name="descForm">Formulário para registro de pontos de interesse</string>
    <string name="title_activity_form">Registro</string>


</resources>
