<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <EditText
        android:id="@+id/editTextFiltro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/textlines"
        android:hint="@string/filter_hint"
        android:inputType="textFilter"
        android:maxLength="140"
        android:contentDescription="@string/descBusca"/>

    <ListView
        android:id="@+id/listpontos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/descLista"/>

</RelativeLayout>
