<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:focusable="true" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:fontFamily="@font/baumans"
        android:textSize="90dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="MapeAR"
        android:textColor="@android:color/holo_green_light"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="QRcode"
        android:text="               QR Code               "
        android:contentDescription="@string/descQRcode"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:id="@+id/button2"
        android:onClick="Form"
        android:layout_above="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:contentDescription="@string/descForm"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista"
        android:id="@+id/button3"
        android:onClick="Lista"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:contentDescription="@string/descLista"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mapa"
        android:id="@+id/button4"
        android:onClick="Mapa"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:contentDescription="@string/descMapa"
        android:minWidth="48dp"
        android:minHeight="48dp" />

</RelativeLayout>
